fixed some bugs

--- a/halal-web/index.html
+++ b/halal-web/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>Halal Web</title>
     <link rel="stylesheet" href="style.css"></link>
+    <script src="https://kit.fontawesome.com/2380b165e2.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div class="main-wrapper center-text">
@@ -10,6 +12,11 @@
         <h3>الحمد لله والصلاة والسلام على رسولة الله وبعد</h3>
         <h4>اختبار حجب الصور</h4>
     </div>
+
+    <h1>Demo of the ::before selector</h1>
+
+    <p>My name is Sami</p>
+    <p>I live in Istanbul</p>
 
     <div id="videos">
         <iframe width="420" height="345" src="https://www.youtube.com/embed/jWzCiGDDBX4">
