--- a/halal-web/popup.html
+++ b/halal-web/popup.html
@@ -5,9 +5,39 @@
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-        <button id="blur">Blur</button>
-        <button id="unblur">Unblur</button>
-        <script src="popup.js"></script>
+    <p id="extension-title">Halal Web</p>
+    <div class="main-buttons">
+      <button id="blur-button">Blur/Unblur</button>
+      <!-- <input type="checkbox" id="extra-safe" name="extra-safe" value="extraSafe">
+      <label for="extra-safe">Extra Safe Mode</label> -->
+    </div>
+    <!-- <div class="media-options">
+      <p id="advanced-options">Advanced options:</p>
+      <input type="checkbox" id="images-checkbox" name="images-checkbox" value="imagesCheckbox">
+      <label for="extra-safe">Images</label>
+      <input type="checkbox" id="videos-checkbox" name="videos-checkbox" value="videosCheckbox">
+      <label for="extra-safe">Videos</label>
+      <input type="checkbox" id="icons-checkbox" name="icons-checkbox" value="iconsCheckbox">
+      <label for="extra-safe">Icons</label>
+      <input type="checkbox" id="iframe-checkbox" name="iframe-checkbox" value="iframeCheckbox">
+      <label for="extra-safe">Iframes</label>
+      <input type="checkbox" id="text-checkbox" name="text-checkbox" value="textCheckbox">
+      <label for="extra-safe">Text</label>
+    </div> -->
+    <hr>
+    </div>
+    <div class="website-settings">
+      <p id="domain">Loading..</p>
+      <div class="website-settings-btns">
+        <button id="whitelist-domain-btn">Whitelist domain</button>
+        <button id="dangerlist-domain-btn">Remove domain from whitelist</button>
+        <button id="whitelist-path-btn">Whitelist path</button>
+      </div>
+
+    </div>
+
+
+    <script src="popup.js"></script>
 
   </body>
 </html>
