Everything working for v2 except: emoji shows on tab for 1 sec, emoji shows on tooltip, emoji shows if it's not code based, twitter does not unhide images

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
 
     <p> p element ::before and ::after with icon in content</p>
     <p class="before">My name is Sami</p>
-    <p class = "after">I live in Istanbul</p>
+    <p class = "after" title="⛑">I live in Istanbul</p>
+    <p>I will display &#65; &#66; &#67;</p> 
+
 
     <div id="videos">
         <p>iframe</p>
