--- a/src/popup.html
+++ b/src/popup.html
@@ -4,12 +4,18 @@
     <title>Halal Web</title>
     <link rel="stylesheet" href="popup.css">
     <script src="helper.js"></script>
+    <script src="jquery-3.6.1.js"></script>
+    <script src="jquery-ui.js"></script>
+    <link href="jquery-ui.css" rel="stylesheet" />
+
 
   </head>
   <body>
     <p id="extension-title">Halal Web</p>
     <div class="main-buttons">
       <button id="blur-button">Blur/Unblur</button>
+      <input type="checkbox" id="lock-button" checked>
+      <label for="lock-button">Lock</label>
       <div class="blur-sliders">
         <p class="blur-labels">Blur level (images/videos):</p>
         <input class="slider" type="range" id="blur-level-elements" name="blur-level-elements" min="0" max="100"/>
@@ -32,8 +38,6 @@
       <p><span style="font-weight: bold;">Unblur:</span> Ctrl + Alt + Hover</p>
 
     </div>
-
-
     <script src="popup.js"></script>
 
   </body>
